Added search logic for user emails.
